# types-array-api

./: .all-contributorsrc  .codespellrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  upgrader.yml
docs/: conf.py  index.md  installation.md  usage.md
src/array_api/: _2022_12.py  _2023_12.py  _2024_12.py  _2025_12.py  __init__.py  _draft.py  latest.py
src/array_api/cli/: _main.py  cli.py
src/array_api_compat/: __init__.pyi
src/array_api_compat/common/: _helpers.py  _helpers.pyi
tests/: test_main.py
