[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "types-array-api"
version = "1.2.0"
description = "Typing for array API and array-api-compat"
readme = "README.md"
license = "MIT AND Apache-2.0"
authors = [
  { name = "34j", email = "34j.95a2p@simplelogin.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "typing-extensions>=4.14",
]
optional-dependencies.cli = [
  "attrs>=25.3",
  "rich>=14",
  "typer>=0.16",
]
urls."Bug Tracker" = "https://github.com/34j/types-array-api/issues"
urls.Changelog = "https://github.com/34j/types-array-api/blob/main/CHANGELOG.md"
urls.documentation = "https://array-api.readthedocs.io"
urls.repository = "https://github.com/34j/types-array-api"
scripts.array-api = "array_api.cli:app"
scripts.types-array-api = "array_api.cli:app"

[dependency-groups]
dev = [
  "array-api-compat>=1.11.2",
  "array-api-strict>=2.3.1",
  "attrs>=25.3",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "rich>=14",
  "ruff>=0.11.13",
  "typer>=0.16",
]
docs = [
  "furo>=2023.5.20; python_version>='3.11'",
  "myst-parser>=0.16; python_version>='3.11'",
  "sphinx>=4; python_version>='3.11'",
  "sphinx-autobuild>=2025,<2026; python_version>='3.11'",
]

[tool.ruff]
line-length = 320
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
  "E501",
  "S603",
  "S607"
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "array_api", "tests" ]

[tool.pytest]
ini_options.addopts = """\
    -v
    -Wdefault
    --cov=array_api
    --cov-report=term
    --cov-report=xml
    """
ini_options.pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
report.exclude_lines = [
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  "docs/.*",
  "setup.py",
]
overrides = [ { module = "tests.*", allow_untyped_defs = true }, { module = "docs.*", ignore_errors = true } ]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/array_api/__init__.py:__version__",
  "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore(?:\\([^)]*?\\))?: .+",
  "ci(?:\\([^)]*?\\))?: .+",
  "refactor(?:\\([^)]*?\\))?: .+",
  "style(?:\\([^)]*?\\))?: .+",
  "test(?:\\([^)]*?\\))?: .+",
  "build\\((?!deps\\): .+)",
  "Merged? .*",
  "Initial [Cc]ommit.*",         # codespell:ignore
]
changelog.environment.keep_trailing_newline = true
